--- a/.github/workflows/app-build.yml
+++ b/.github/workflows/app-build.yml
@@ -6,7 +6,7 @@ on:
       go_version:
         required: false
         type: string
-        default: '1.21'
+        default: '1.22'
       node_version:
         required: false
         type: string
@@ -24,6 +24,11 @@ on:
         type: string
         default: '-Dfile.encoding=UTF8'
 
+env:
+  # don't auto-upgrade the gotoolchain
+  # https://github.com/docker-library/golang/issues/472
+  GOTOOLCHAIN: local
+
 jobs:
   run:
     runs-on: windows-latest
@@ -36,21 +41,21 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       -
         name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
       -
         name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
       -
         name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: adopt
           java-version: ${{ env.JAVA_VERSION }}
@@ -87,11 +92,17 @@ jobs:
         shell: bash
       -
         name: Checkout core
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: portapps/portapps
           ref: ${{ env.PORTAPPS_VERSION }}
           path: ${{ env.PORTAPPS_DIR }}
+      -
+        name: Cache Portapps bin
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.PORTAPPS_DIR }}/bin
+          key: portapps-bin-${{ env.PORTAPPS_VERSION }}
       -
         name: Build
         run: |
@@ -99,13 +110,13 @@ jobs:
         shell: bash
       -
         name: Upload assets
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}
           path: bin/release/*
       -
         name: GitHub Release
-        uses: crazy-max/ghaction-github-release@v1
+        uses: crazy-max/ghaction-github-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           draft: true
